# Crypto-QuantLab

./: .gitignore  README.md  api_server.py  crypto_quantlab.py  docker-compose.yml  main.py  package-lock.json  package.json  pyproject.toml  reddit_sentiment.csv  requirements.txt  scoring_algo.py  test_btc_scaler.joblib
api/: main.py
app/: .docker-compose.yml.swo  .models.py.swp  .setup_mysql.sh.swp  __init__.py  database.py  docker-compose.yml  models.py  schemas.py  setup_mysql.sh
app/api/: .finance_routes.py.swp  .sentiment_routes.py.swp  dependencies.py  finance_routes.py  routes.py  sentiment_routes.py
app/api/routes/: data_ingestion.py  data_processing.py  ml_models.py
app/core/: database.ini
app/core/scripts/: populate.py
app/data/: get_data.py  get_financial_data.py  get_reddit_social_data.py  get_social_data.py  ml_models.py  process_data.py
app/data/csvs/: bitcoin.csv  bitcoin_financials.csv  ethereum.csv  reddit_sentiment.csv
app/models/: lstm_train.py  model_train.py  train_models.py
app/services/: ai_report.py  crypto_lstm_model.pth  data_ingestion.py  data_processing.py
crypto-frontend/: package-lock.json  package.json
crypto-frontend/src/: App.js  index.css
crypto_quantlab.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
frontend/: README.md  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.js  index.js
frontend/src/Common/: Carousel.jsx  Graph.jsx  Logo.tsx
frontend/src/FeaturePage/: FeaturePage.jsx  \
frontend_app/: README.md  package-lock.json  package.json
(+17 files in other folders)
