[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-quantlab"
version = "1.0.0"
description = "One file. Ten thousand simulations. Zero complexity."
readme = "README.md"
authors = [{name = "Avery Clapp", email = "avery.clapp@gmail.com"}]

classifiers = [
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Mathematics", 
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0", 
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
    "yfinance>=0.1.70",
    "matplotlib>=3.5.0"
]

[project.optional-dependencies]
advanced = [
    "pymc>=5.0.0",
    "arch>=5.3.0", 
    "plotly>=5.0.0",
    "streamlit>=1.12.0"
]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "mypy>=0.991"
]

[project.scripts]
crypto-quantlab = "crypto_quantlab:main"

[tool.setuptools]
py-modules = ["crypto_quantlab"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
